package edu.escuelaing.arep;

public interface RestService {
    String response(Request req, Response resp);
}
